# northstar

./: rakefile.rb
.github/workflows/: ci.yml
examples/container/memeater/: manifest.yaml
examples/container/resource/ferris/: manifest.yaml
examples/container/resource/ferris_says_hello/: manifest.yaml
examples/container/resource/hello_message/: manifest.yaml
north/src/: manifest.rs
sextant/: Cargo.toml
sextant/src/: main.rs  npk.rs
