[package]
name = "sextant"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
base64 = "0.12.3"
env_logger = "0.7.1"
fs_extra = "1.1.0"
glob = "0.3.0"
hex = "0.4.2"
itertools = "0.9.0"
log = "0.4.8"
rand = "0.7.3"
serde_yaml = "0.8.13"
sha2 = "0.9.1"
sodiumoxide = "0.2.6"
structopt = "0.3.14"
tempdir = "0.3.7"
uuid = "0.8.1"
#zip = "0.5.6"
zip = {path = "../../zip-rs"} # for use with sextant
north = {path = "../north"}
